<resources>
    <string name="app_name">OurBalance</string>
    <string name="main_app_name">our\nbalance</string>
    <string name="main_login_message">로그인 / 회원가입하여\n 밸런스 리스트를 추가해보세요</string>
    <string name="main_empty_message">하단의 + 버튼을 눌러\n 새로운 밸런스 항목을 생성해보세요</string>
    <string name="main_waiting_message">waiting..</string>
    <string name="greeting_title">안녕하세요\nBalance입니다</string>
    <string name="navigate_to_login">회원가입 및 로그인</string>
    <string name="sign_in_title">Sign In</string>
    <string name="hint_for_nickname">사용하실 닉네임을 입력해주세요</string>
    <string name="hint_for_email">이메일을 입력해주세요</string>
    <string name="hint_for_password">비밀번호를 입력해주세요</string>
    <string name="hint_for_check_password">비밀번호를 확인해주세요</string>
    <string name="button_login">로그인</string>
    <string name="button_signup">회원가입</string>
    <string name="check_first_time">처음이신가요?</string>
    <string name="check_exist_account">이미 계정이 있다면?</string>
    <string name="signup_title">Create Account</string>
    <string name="error_email_format">이메일 형식이 아닙니다.</string>
    <string name="error_password_format">비밀번호는 6~15자리로 입력해주세요.</string>
    <string name="error_password_check">비밀번호가 일치하지 않습니다.</string>

    <!-- add balance -->
    <string name="bottom_sheet_title_add_balance">balance 항목을 추가합니다</string>
    <string name="close">닫기</string>
    <string name="title_add_balance">new\nbalance</string>
    <string name="title_add_balance_code">add\nbalance</string>
    <string name="hint_for_balance_name">Balance 항목의 이름을 설정해주세요</string>
    <string name="hint_for_balance_code">초대코드 N자리를 입력하세요</string>
    <string name="button_add_balance_by_code">초대코드로\n항목 추가</string>
    <string name="button_add_balance">balance 항목\n직접 생성</string>
    <string name="btn_cancel">취소하기</string>
    <string name="btn_add_balance">생성하기</string>

    <!-- balance detail -->
    <string name="label_than">님이&#160;</string>
    <string name="message_compare">님을 위해 더 지불한 금액</string>
    <string name="label_invitation_code">초대코드 : %d</string>

    <!-- add payment -->
    <string name="title_add_payment">new\npayment</string>
    <string name="label_payer">님이</string>
    <string name="label_amount">을 냈어요</string>
    <string name="label_content">를 위해</string>
    <string name="title_choose_payer">누가 지불했나요?</string>
    <string name="title_specify_amount">얼마를 지불했나요?</string>
    <string name="title_specify_content">어떤 비용을 지불했나요?</string>
    <string name="title_specify_date">언제 지불했나요?</string>
    <string name="hint_for_amount">지불금액</string>
    <string name="hint_for_content">지불항목</string>
    <string name="slash_label">/</string>
    <string name="button_add_payment">비용 추가하기</string>
    <string name="currency_format">%,d원</string>
    <string name="message_invitation_code">🎉 함께할 상대를 초대하세요 🎉</string>
    <string name="message_empty_payment">\n+ 버튼을 눌러 정산항목을 추가해보세요\n</string>
    <string name="payment_summary_payer_label">의 지불금액</string>
    <string name="title_payment_list">%s의 지불내역</string>

    <!-- profile -->
    <string name="title_profile">%s 님\n안녕하세요</string>
    <string name="title_update_nickname">닉네임 수정</string>
    <string name="title_question_and_answer">문의하기 / Q &amp; A</string>
    <string name="title_makers">만든사람들</string>
    <string name="title_logout">로그아웃</string>
    <string name="title_withdraw">회원탈퇴</string>
</resources>