<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="username"
            type="String" />

        <variable
            name="vm"
            type="com.ourbalance.feature.screen.information.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".information.profile.ProfileFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/space_normal" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large"
            android:text="@{@string/title_profile(username)}"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Avery 님\n안녕하세요" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_update_nickname"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_normal"
            android:text="@string/title_update_nickname"
            android:textAppearance="@style/PlainText"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_question"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_question_and_answer"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/btn_update_nickname" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_makers"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_makers"
            android:textAppearance="@style/PlainText"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/btn_question" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_default"
            android:onClick="@{()->vm.logout()}"
            android:text="@string/title_logout"
            android:textColor="@color/dark_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_withdraw"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_withdraw"
            android:textColor="@color/grey"
            app:layout_constraintBaseline_toBaselineOf="@id/btn_logout"
            app:layout_constraintStart_toEndOf="@id/btn_logout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>