<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.ourbalance.feature.home.addbalance.AddBalanceCodeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.addbalance.AddBalanceCodeFragment">

        <TextView
            android:id="@+id/tv_title"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_default"
            android:text="@string/title_add_balance_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibt_close"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_margin="@dimen/space_default"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_balance_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_default"
            android:layout_marginTop="@dimen/space_large"
            app:boxBackgroundColor="@null"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_balance_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_for_balance_code"
                android:inputType="number"
                android:maxLines="1"
                android:text="@={vm.code}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_cancel"
            style="@style/LargeButton.OutLined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_default"
            android:layout_marginEnd="@dimen/space_text"
            android:layout_marginBottom="@dimen/space_default"
            android:onClick="@{()->vm.close()}"
            android:paddingVertical="@dimen/space_padding"
            android:text="@string/btn_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_add"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_add"
            style="@style/LargeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_default"
            android:layout_marginEnd="@dimen/space_text"
            android:layout_marginBottom="@dimen/space_default"
            android:enabled="@{vm.enable}"
            android:onClick="@{()->vm.participate()}"
            android:paddingVertical="@dimen/space_padding"
            android:text="@string/btn_add_balance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>